[project]
name = "user-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest-env>=1.6.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pytest_env]
DB_HOST="127.0.0.1"
DB_PORT=5432
